<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo_description"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:maxWidth="600dp"
        android:importantForAutofill="yes" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:maxWidth="600dp"
        android:importantForAutofill="yes" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:background="@color/design_default_color_primary"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:maxWidth="600dp"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:background="@color/design_default_color_secondary"
        android:textColor="@color/high_contrast_text"
        android:padding="10dp"
        android:maxWidth="600dp"
        style="@style/Widget.AppCompat.Button.Colored" />
</LinearLayout>
